commit after stepper in filter

--- a/src/app/booking-reservation/booking-reservation.component.html
+++ b/src/app/booking-reservation/booking-reservation.component.html
@@ -1,6 +1,6 @@
-<h1>Component Created</h1>
+<h1>Component</h1>
 
-<!-- <div class="container">
+ <div class="container">
     <div class="row">
         <div class="col">
             <table>
@@ -16,9 +16,13 @@
                 <tbody *ngFor="let reservation of reservations">
                 
                         <td>{{reservation.roomId}}</td>
-                
+                        <td>{{reservation.roomId}}</td>
+                        <td>{{reservation.roomId}}</td>
+                        <td>{{reservation.arrivalDate}}</td>
+                        <td>{{reservation.departureDate}}</td>
+
                 </tbody>
             </table>
         </div>
     </div>
-</div> -->
+</div> 
