--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,6 +17,12 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="planningChart">Planning Chart</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="customer">Customer Form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="chart">Chart</a>
+          </li>
         <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li> -->
