--- a/src/app/new-reservation/new-reservation.component.html
+++ b/src/app/new-reservation/new-reservation.component.html
@@ -1,1 +1,43 @@
-<p>new-reservation works!</p>
+
+
+<div class="container">
+    <h2 class="my-4">Create Reservation</h2>
+    <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="reservationId">Reservation ID</label>
+        <input type="text" class="form-control" id="reservationId" formControlName="reservationId">
+      </div>
+      <div class="form-group">
+        <label for="roomId">Room ID</label>
+        <input type="text" class="form-control" id="roomId" formControlName="roomId">
+      </div>
+      <div class="form-group">
+        <label for="stayDateFrom">Stay Date From</label>
+        <input type="date" class="form-control" id="stayDateFrom" formControlName="stayDateFrom">
+      </div>
+      <div class="form-group">
+        <label for="stayDateTo">Stay Date To</label>
+        <input type="date" class="form-control" id="stayDateTo" formControlName="stayDateTo">
+      </div>
+      <div class="form-group">
+        <label for="numberOfDays">Number of Days</label>
+        <input type="text" class="form-control" id="numberOfDays" formControlName="numberOfDays">
+      </div>
+      <div class="form-group">
+        <label for="totalNumberOfGuest">Total Number of Guests</label>
+        <input type="text" class="form-control" id="totalNumberOfGuest" formControlName="totalNumberOfGuest">
+      </div>
+      <div class="form-group">
+        <label for="pricePerDayPerPerson">Price Per Day Per Person</label>
+        <input type="text" class="form-control" id="pricePerDayPerPerson" formControlName="pricePerDayPerPerson">
+      </div>
+      <div class="form-group">
+        <label for="totalPrice">Total Price</label>
+        <input type="text" class="form-control" id="totalPrice" formControlName="totalPrice">
+      </div>
+      <button type="submit" class="btn btn-primary mt-3">Create Reservation</button>
+    </form>
+    <button class="btn btn-success" (click)="onClick()" type="button">random number</button>
+    <div id="randomNum">{{ randomNumber }}</div>
+  </div>
+  
