--- a/src/app/planning-chart/planning-chart.component.css
+++ b/src/app/planning-chart/planning-chart.component.css
@@ -1,4 +1,4 @@
-.planning-chart-container {
+/* .planning-chart-container {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -20,6 +20,10 @@
   canvas {
     display: block;
     width: 100%;
-    height: 400px; /* Adjust as needed */
-  }
+    height: 400px;
+  } */
   
+  #ganttChart {
+    width: 100%;
+    height: 400px;
+  }
