--- a/src/app/chartt/chartt.component.html
+++ b/src/app/chartt/chartt.component.html
@@ -1,1 +1,11 @@
-<canvas #myChart></canvas>
+
+<div>
+    <canvas #myChart></canvas>
+</div>
+<!-- 
+<div style="width: 40%;">
+    <canvas
+      baseChart
+    >
+    </canvas>
+  </div> -->
