--- a/src/app/filter/filter.component.css
+++ b/src/app/filter/filter.component.css
@@ -1,13 +1,16 @@
 .filter-container {
-    width: 100%;
+    /* width: 100%; */
     /* margin: auto; */
     /* padding: 1em; */
     background-size: cover; 
     background-position: center; 
-    background-repeat: no-repeat; 
-    color: white;
+    /* background-repeat: no-repeat;  */
+    color: rgb(10, 10, 10);
   }
   
+  h2{
+    color: white;
+  }
   .form-group {
     margin-bottom: 1em;
   }
@@ -36,3 +39,11 @@
     background-color: #1a65bb;
   }
   
+  .card{
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  }
