--- a/src/app/chartt/chartt.component.html
+++ b/src/app/chartt/chartt.component.html
@@ -1,7 +1,7 @@
 
-<div>
+<!-- <div>
     <canvas #myChart></canvas>
-</div>
+</div> -->
 <!-- 
 <div style="width: 40%;">
     <canvas
@@ -9,3 +9,5 @@
     >
     </canvas>
   </div> -->
+
+  <canvas id="chartCanvas" ></canvas>
