--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,29 @@
 <div
   id="intro-example"
   class="p-5 text-center bg-image d-flex justify-content-center align-items-center"
-  style="background-image: url('Assets/background.jpg'); height: 100vh;"
+  style="
+    background-image: url('Assets/Background5.jpg');
+    background-size: cover; /* Ensure the image covers the entire container */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent image repetition */
+    height: 100vh; /* Full viewport height */
+    width: 100%; /* Full width */
+  "
 >
-  <div class="mask" style="background-color: rgba(0, 0, 0, 0.7); width: 100%; height: 100%;">
+  <div class="mask" style="width: 100%; height: 100%;">
     <div class="d-flex justify-content-center align-items-center h-100">
       <div class="text-light text-center">
         <h1 class="mb-3">Experience Luxury Beyond Imagination</h1>
         <h5 class="mb-4">Discover The Comfortable</h5>
         <a
-          class="btn btn-outline-info btn-lg m-2"
+          class="btn btn-info btn-lg m-2"
           routerLink="/rooms"
           >Book Reservation</a>
-        <a
+        <!-- <a
           data-mdb-ripple-init
-          class="btn btn-outline-info btn-lg m-2"
+          class="btn btn-primary btn-lg m-2"
           routerLink="/planningChart"
-        >Planning Chart</a>
+        >Planning Chart</a> -->
       </div>
     </div>
   </div>
