--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -9,7 +9,7 @@
         <form [formGroup]="filterForm" (ngSubmit)="applyFilters()">
           <div class="row">
             <div class="form-group col-md-2 mb-3">
-              <label for="location">Location</label>
+              <label for="location" class="form-label">Location</label>
               <select id="location" formControlName="location" class="form-control" (change)="onLocationChange($event)">
                 <option value="">Select Location</option>
                 <option *ngFor="let loc of locations" [value]="loc">{{ loc }}</option>
@@ -18,17 +18,17 @@
             
 
             <div class="form-group col-md-2 mb-3">
-              <label for="dateFrom">Check In</label>
+              <label for="dateFrom" class="form-label">Check In</label>
               <input id="dateFrom" type="date" formControlName="dateFrom" class="form-control">
             </div>
 
             <div class="form-group col-md-2 mb-3">
-              <label for="dateTo">Check Out</label>
+              <label for="dateTo" class="form-label">Check Out</label>
               <input id="dateTo" type="date" formControlName="dateTo" class="form-control">
             </div>
 
             <div class="form-group col-md-2 mb-3">
-              <label for="numberOfPersons">Guests</label>
+              <label for="numberOfPersons" class="form-label">Guests</label>
               <input id="numberOfPersons" type="number" formControlName="numberOfPersons" class="form-control">
             </div>
 
@@ -55,7 +55,7 @@
           </div>
 
           <div class="text-center">
-            <button type="submit" class="btn btn-outline-light">Find Rooms</button>
+            <button type="submit" class="btn btn-primary">Find Rooms</button>
           </div>
         </form>
 
@@ -93,7 +93,7 @@
             <td>{{ room.minStay }}</td>
             <td>{{ room.maxStay }}</td>
             <td>
-              <button class="btn btn-primary" (click)="openBookingModal(room)">Book Now</button>
+              <button class="btn btn-outline-primary" (click)="openBookingModal(room)">Book Now</button>
             </td>
           </tr>
         </tbody>
@@ -116,7 +116,7 @@
               </p>
             </div>
             <div class="card-footer text-center bg-transparent border-0">
-              <button class="btn btn-primary" (click)="openBookingModal(room)">Book Now</button>
+              <button class="btn btn-outline-primary" (click)="openBookingModal(room)">Book Now</button>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="bookingModalLabel">Booking Details</h5>
+        <h5 class="modal-title" id="bookingModalLabel" style="color: darkcyan;">Booking Details</h5>
         <button type="button" class="btn-close" (click)="closeBookingModal()"></button>
       </div>
       <div class="modal-body">
@@ -142,88 +142,107 @@
                 <p class="form-text">{{ bookingForm.get('reservationId')?.value }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Room No.</label>
+                <label class="form-label">Room no.</label>
                 <p class="form-text">{{ bookingForm.get('roomNo')?.value }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Arrival Date</label>
+                <label class="form-label">Arrival date</label>
                 <p class="form-text">{{ bookingForm.get('stayDateFrom')?.value | date }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Departure Date</label>
+                <label class="form-label">Departure date</label>
                 <p class="form-text">{{ bookingForm.get('stayDateTo')?.value | date }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Number of Days</label>
+                <label class="form-label">Number of days</label>
                 <p class="form-text">{{ bookingForm.get('numberOfDays')?.value }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Reservation Date</label>
+                <label class="form-label">Reservation date</label>
                 <p class="form-text">{{ bookingForm.get('reservationDate')?.value | date:'short' }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Total Number of Guests</label>
+                <label class="form-label">Guests</label>
                 <p class="form-text">{{ bookingForm.get('totalNumberOfGuests')?.value }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Price Per Day Per Person</label>
+                <label class="form-label">Price per person</label>
                 <p class="form-text">{{ bookingForm.get('pricePerDayPerPerson')?.value | currency }}</p>
               </div>
               <div class="form-group">
-                <label class="form-label">Total Price</label>
+                <label class="form-label">Total price</label>
                 <p class="form-text">{{ bookingForm.get('totalPrice')?.value | currency }}</p>
               </div>
             </div>
           </div>
         </div>
         <div *ngIf="currentStep === 2">
-          <form [formGroup]="customerForm" class="form-row">
-            <div class="mb-3">
-              <label for="customerId" class="form-label">Customer ID</label>
-              <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly>
+          <form [formGroup]="customerForm" class="container">
+            <div class="row mb-3">
+              <div class="col-12">
+                <label for="customerId" class="form-label">Customer ID</label>
+                <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input type="text" id="name" class="form-control" formControlName="name">
+            <div class="row mb-3">
+              <div class="col-md-4">
+                <label for="firstName" class="form-label">First Name</label>
+                <input type="text" id="firstName" class="form-control" formControlName="firstName">
+              </div>
+              <div class="col-md-4">
+                <label for="middleName" class="form-label">Middle Name</label>
+                <input type="text" id="middleName" class="form-control" formControlName="middleName">
+              </div>
+              <div class="col-md-4">
+                <label for="lastName" class="form-label">Last Name</label>
+                <input type="text" id="lastName" class="form-control" formControlName="lastName">
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="age" class="form-label">Age</label>
-              <input type="number" id="age" class="form-control" formControlName="age">
+            <div class="row mb-3">
+              <div class="col-md-4">
+                <label for="birthDate" class="form-label">Birth Date</label>
+                <input type="date" id="birthDate" class="form-control" formControlName="birthDate" (change)="onBirthDateChange()">
+              </div>
+              <div class="col-md-4">
+                <label for="age" class="form-label">Age</label>
+                <input type="number" id="age" class="form-control" formControlName="age" readonly>
+              </div>
+              <div class="col-md-4">
+                <label for="mobileNumber" class="form-label">Mobile Number</label>
+                <input type="text" id="mobileNumber" class="form-control" formControlName="mobileNumber">
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="birthDate" class="form-label">Birth Date</label>
-              <input type="date" id="birthDate" class="form-control" formControlName="birthDate">
+            <div class="row mb-3">
+              <div class="col-md-4">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" id="address" class="form-control" formControlName="address">
+              </div>
+              <div class="col-md-4">
+                <label for="district" class="form-label">District</label>
+                <input type="text" id="district" class="form-control" formControlName="district">
+              </div>
+              <div class="col-md-4">
+                <label for="pincode" class="form-label">Pincode</label>
+                <input type="text" id="pincode" class="form-control" formControlName="pincode">
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="address" class="form-label">Address</label>
-              <input type="text" id="address" class="form-control" formControlName="address">
-            </div>
-            <div class="mb-3">
-              <label for="mobileNumber" class="form-label">Mobile Number</label>
-              <input type="text" id="mobileNumber" class="form-control" formControlName="mobileNumber">
-            </div>
-            <div class="mb-3">
-              <label for="pincode" class="form-label">Pincode</label>
-              <input type="text" id="pincode" class="form-control" formControlName="pincode">
-            </div>
-            <div class="mb-3">
-              <label for="district" class="form-label">District</label>
-              <input type="text" id="district" class="form-control" formControlName="district">
-            </div>
-            <div class="mb-3">
-              <label for="city" class="form-label">City</label>
-              <input type="text" id="city" class="form-control" formControlName="city">
-            </div>
-            <div class="mb-3">
-              <label for="state" class="form-label">State</label>
-              <input type="text" id="state" class="form-control" formControlName="state">
-            </div>
-            <div class="mb-3">
-              <label for="country" class="form-label">Country</label>
-              <input type="text" id="country" class="form-control" formControlName="country">
+            <div class="row mb-3">
+              <div class="col-md-4">
+                <label for="city" class="form-label">City</label>
+                <input type="text" id="city" class="form-control" formControlName="city">
+              </div>
+              <div class="col-md-4">
+                <label for="state" class="form-label">State</label>
+                <input type="text" id="state" class="form-control" formControlName="state">
+              </div>
+              <div class="col-md-4">
+                <label for="country" class="form-label">Country</label>
+                <input type="text" id="country" class="form-control" formControlName="country">
+              </div>
             </div>
           </form>
         </div>
+        
         <div *ngIf="currentStep === 3">
           <form [formGroup]="paymentForm" *ngIf="currentStep === 3">
             <div class="mb-3">
@@ -232,11 +251,24 @@
             </div>
             <div class="mb-3">
               <label for="paymentMode" class="form-label">Payment Mode</label>
-              <input type="text" id="paymentMode" class="form-control" formControlName="paymentMode">
+              <select id="paymentMode" class="form-select" formControlName="paymentMode">
+                <option value="creditCard">Credit Card</option>
+                <option value="debitCard">Debit Card</option>
+                <option value="netBanking">Net Banking</option>
+                <option value="upi">UPI</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="totalAmount" class="form-label">Total Amount</label>
+              <input type="text" id="totalAmount" class="form-control" formControlName="totalAmount" readonly>
             </div>
             <div class="mb-3">
               <label for="paidAmount" class="form-label">Paid Amount</label>
-              <input type="number" id="paidAmount" class="form-control" formControlName="paidAmount">
+              <input type="number" id="paidAmount" class="form-control" formControlName="paidAmount" (input)="updateDueAmount()">
+            </div>
+            <div class="mb-3">
+              <label for="dueAmount" class="form-label">Due Amount</label>
+              <input type="text" id="dueAmount" class="form-control" formControlName="dueAmount" readonly>
             </div>
           </form>
         </div>
@@ -244,7 +276,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="closeBookingModal()">Close</button>
         <button type="button" class="btn btn-primary" (click)="previousStep()" [hidden]="currentStep === 1">Previous</button>
-        <button type="button" class="btn btn-primary" (click)="nextStep()">
+        <button type="button" class="btn btn-success" (click)="nextStep()">
           {{ currentStep === 3 ? 'Submit Booking' : 'Next' }}
         </button>
       </div>
