post work from 20th august 2024

--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <form [formGroup]="customerForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="customerId">Customer ID</label>
@@ -62,7 +62,7 @@
         <input type="text" id="country" formControlName="country" class="form-control">
       </div>
   
-      <!-- <button type="button" class="btn btn-primary" (click)="generateCustomerId()">Generate Customer ID</button> -->
+      <button type="button" class="btn btn-primary" (click)="generateCustomerId()">Generate Customer ID</button>
       <button type="submit" class="btn btn-success" >Submit</button>
     </form>
     <div *ngIf="customerForm.value">
@@ -72,4 +72,4 @@
 
     <div>{{customerForm.value.customerId}}</div>
   </div>
-  
+   -->
