--- a/src/app/filter/filter.component.css
+++ b/src/app/filter/filter.component.css
@@ -26,33 +26,11 @@
     box-sizing: border-box;
   }
   
-  /* button {
-    padding: 0.5em 1em;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 0.25em;
-    cursor: pointer;
-  } */
-  
-  /* button:hover {
-    background-color: #1a65bb;
-  } */
-  
   .btn-primary:hover {
     background-color: #0056b3;
     color: #fff;
     transform: scale(1.05);
   }
-  
-  /* .card{
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
-
-  .card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
-  } */
 
   .cards-container {
     display: flex;
@@ -60,6 +38,12 @@
     gap: 16px;
     justify-content: center;
     padding: 20px;
+  }
+  
+  .card-img-top {
+    width: 100%;
+    height: 250px; /* Adjust this value as needed to maintain the aspect ratio */
+    object-fit: cover; /* Ensures the image covers the container without distortion */
   }
   
   /* Card styling */
@@ -76,7 +60,6 @@
     transform: scale(1.05); /* Slight zoom effect */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
   }
-  
 
   /* Style for the filtered rooms count section */
 .filtered-rooms-count {
@@ -203,4 +186,45 @@ thead.thead-dark th {
   /* border: 1px solid #ced4da; */
   border-radius: 0.25rem;
   color: #495057;
+}
+
+/* CSS for Invoice */
+/* styles.css */
+#invoice-content {
+  font-family: Arial, sans-serif;
+}
+
+.invoice-header, .invoice-section {
+  margin-bottom: 20px;
+}
+
+.invoice-header h1 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.invoice-header p {
+  margin: 5px 0;
+}
+
+.invoice-section {
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.invoice-section h2 {
+  font-size: 18px;
+  border-bottom: 2px solid #333;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.invoice-section p {
+  margin: 5px 0;
+}
+
+.invoice-footer {
+  text-align: right;
+  font-weight: bold;
 }
