--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -31,25 +31,19 @@
               <label for="numberOfPersons" class="form-label">Guests</label>
               <input id="numberOfPersons" type="number" formControlName="numberOfPersons" class="form-control">
             </div>
-
-            <!-- <div class="form-group col-md-2 mb-3">
-              <label for="maxPrice">Max Price</label>
-              <input id="maxPrice" type="number" formControlName="maxPrice" class="form-control">
-            </div> -->
             <div class="form-group col-md-2 mb-3">
               <label for="maxPrice" class="form-label">Price</label>
               <input type="range" class="form-range" min="0" max="4000" id="maxPrice" formControlName="maxPrice">
               <output id="priceOutput">{{ filterForm.get('maxPrice')?.value }}</output>
             </div>
-            
-
+          
             <div class="form-group col-md-1 mb-3">
-              <label for="minStay">Min Stay</label>
+              <label for="minStay" class="form-label">Min Stay</label>
               <input id="minStay" type="number" formControlName="minStay" class="form-control">
             </div>
 
             <div class="form-group col-md-1 mb-3">
-              <label for="maxStay">Max Stay</label>
+              <label for="maxStay" class="form-label">Max Stay</label>
               <input id="maxStay" type="number" formControlName="maxStay" class="form-control">
             </div>
           </div>
@@ -103,10 +97,10 @@
     <!-- Room Cards Column -->
     <div class="col-12">
       <div class="row room-cards">
-        <div *ngFor="let room of filteredRooms" class="col-md-6 col-lg-4 mb-4">
+        <div *ngFor="let room of filteredRooms; let i = index" class="col-md-6 col-lg-4 mb-4">
           <div class="card h-100 shadow-lg border-0">
-            <!-- <img [src]="getImageUrl(room.imageFileName)" class="card-img-top" alt="{{ room.roomName }}"> -->
-            <img src="Assets/resort1.jpg" class="card-img-top" alt="Room Image">
+            <img [src]="getImageUrl(i)" class="card-img-top" alt="Room Image" >
+            <!-- <img src="Assets/resort1.jpg" class="card-img-top" alt="Room Image"> -->
             <div class="card-body">
               <h5 class="card-title">{{ room.roomName }}</h5>
               <p class="card-text">
@@ -125,6 +119,7 @@
   </div>
 </div>
 
+
 <!-- Booking Modal HTML -->
 <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -134,6 +129,7 @@
         <button type="button" class="btn-close" (click)="closeBookingModal()"></button>
       </div>
       <div class="modal-body">
+        <!-- Step 1: Booking Information -->
         <div *ngIf="currentStep === 1">
           <div class="modal-step-content">
             <div class="form-row">
@@ -176,6 +172,8 @@
             </div>
           </div>
         </div>
+        
+        <!-- Step 2: Customer Information -->
         <div *ngIf="currentStep === 2">
           <form [formGroup]="customerForm" class="container">
             <div class="row mb-3">
@@ -243,8 +241,9 @@
           </form>
         </div>
         
+        <!-- Step 3: Payment Information -->
         <div *ngIf="currentStep === 3">
-          <form [formGroup]="paymentForm" *ngIf="currentStep === 3">
+          <form [formGroup]="paymentForm">
             <div class="mb-3">
               <label for="paymentId" class="form-label">Payment ID</label>
               <input type="text" id="paymentId" class="form-control" formControlName="paymentId" readonly>
@@ -272,16 +271,54 @@
             </div>
           </form>
         </div>
+        
+        <!-- Step 4: Download PDF -->
+        <div *ngIf="currentStep === 4">
+          <div class="text-center">
+            <h1>Your booking details have been successfully submitted.</h1>
+            <div class="invoice-header">
+              <p>Reservation ID: {{ bookingForm.value.reservationId }}</p>
+              <p>Room No: {{ bookingForm.value.roomNo }}</p>
+              <p>Stay From: {{ bookingForm.value.stayDateFrom }}</p>
+              <p>Stay To: {{ bookingForm.value.stayDateTo }}</p>
+              <p>Number of Days: {{ bookingForm.value.numberOfDays }}</p>
+              <p>Total Guests: {{ bookingForm.value.totalNumberOfGuests }}</p>
+              <!-- <p>Total Price: {{ bookingForm.value.totalPrice }}</p> -->
+            </div>
+            <div class="invoice-section">
+              <h2>Customer Information</h2>
+              <p>Customer ID: {{ customerForm.value.customerId }}</p>
+              <p>Name: {{ customerForm.value.firstName }} {{ customerForm.value.middleName }} {{ customerForm.value.lastName }}</p>
+              <!-- <p>Age: {{ customerForm.value.age }}</p>
+              <p>Birth Date: {{ customerForm.value.birthDate }}</p>
+              <p>Mobile Number: {{ customerForm.value.mobileNumber }}</p> -->
+              <p>Address: {{ customerForm.value.address }}</p>
+              <!-- <p>Pincode: {{ customerForm.value.pincode }}</p>
+              <p>City: {{ customerForm.value.city }}</p>
+              <p>State: {{ customerForm.value.state }}</p>
+              <p>Country: {{ customerForm.value.country }}</p> -->
+            </div>
+            <div class="invoice-section">
+              <h2>Payment Information</h2>
+              <!-- <p>Payment ID: {{ paymentForm.value.paymentId }}</p> -->
+              <p>Total Amount: {{ paymentForm.value.totalAmount }}</p>
+              <p>Paid Amount: {{ paymentForm.value.paidAmount }}</p>
+              <p>Due Amount: {{ paymentForm.value.dueAmount }}</p>
+            </div>
+            <div class="invoice-footer">
+              Thank you for your booking!
+            </div>
+          </div>
+        </div>
+        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="closeBookingModal()">Close</button>
         <button type="button" class="btn btn-primary" (click)="previousStep()" [hidden]="currentStep === 1">Previous</button>
         <button type="button" class="btn btn-success" (click)="nextStep()">
-          {{ currentStep === 3 ? 'Submit Booking' : 'Next' }}
+          {{ currentStep === 4 ? 'Finish' : 'Next' }}
         </button>
       </div>
     </div>
   </div>
 </div>
-
-
