--- a/src/app/planning-chart/planning-chart.component.html
+++ b/src/app/planning-chart/planning-chart.component.html
@@ -30,7 +30,7 @@
 <div class="container mt-4 mb-4">
   <h2 class="text-center mb-4">Room Availability Gantt Chart</h2>
   <div class="chart-container mb-4">
-    <div id="ganttChart"></div>
+    <div id="ganttChart" style="width: 100%; height: 500px;"></div>
   </div>
 </div>
 
