--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
           <a class="nav-link" routerLink="reservationDetails">Reservation Details</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="planningChart">Planning Chart</a>
+            <a class="nav-link" routerLink="planningchart">Planning Chart</a>
           </li>
       </ul>
     </div>
