--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -1,1 +1,29 @@
-<svg width="100%" height="600"></svg>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="row">
+        <div class="form-group col-md-3">
+          <label for="monthSelect">Select Month</label>
+          <select class="form-control" id="monthSelect" (change)="onMonthChange($event)">
+            <option *ngFor="let month of months" [value]="month.value">
+              {{ month.name }}
+            </option>
+          </select>
+        </div>
+      </div>
+      
+      <div class="chart-container">
+        <div class="chart">
+          <div class="day-header">Room</div>
+          <div *ngFor="let day of days" [ngClass]="{ 'day-header': true, 'weekend': isWeekend(day) }">
+            {{ day }}
+          </div>
+          <ng-container *ngFor="let room of rooms">
+            <div class="room-name">Room {{ room }}</div>
+            <div *ngFor="let day of days" [ngClass]="getCellClass(room, day)" class="cell"></div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
